--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
   </head>
   <body>
     <header>
-      <nav>
-        <div class="nav-top ">
+      <nav class="pos-rel">
+        <div class="nav-top">
             <a href="#">Effettua l'upgrade</a>
+        </div>
+        <div class="nav-lat">
+          <div class="logo">
+            <img src="./assets/img/logo.png" alt="logo">
+          </div>
+
         </div>
       </nav>
     </header>
