--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
         </div>
         <div class="nav-lat">
           <div class="logo">
+            <i class="fab fa-spotify"></i>
             <img src="./assets/img/logo.png" alt="logo">
           </div>
 
+          <div class="list-home">
+            <a href="#"><i class="fas fa-home"></i> Home</a>
+            <a href="#"><i class="fas fa-search"></i> Cerca</a>
+            <a href="#"><i class="fas fa-book"></i> La tua libreria</a>
+          </div>
         </div>
       </nav>
     </header>
