web app spotify

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
   <body>
     <header>
       <nav class="pos-rel">
+        <!-- navbar fixed top -->
         <div class="nav-top">
             <a href="#">Effettua l'upgrade</a>
         </div>
+
+        <!-- navbar laterale -->
         <div class="nav-lat">
           <div class="logo">
             <i class="fab fa-spotify"></i>
@@ -24,6 +27,19 @@
             <a href="#"><i class="fas fa-home"></i> Home</a>
             <a href="#"><i class="fas fa-search"></i> Cerca</a>
             <a href="#"><i class="fas fa-book"></i> La tua libreria</a>
+          </div>
+
+          <div class="list-home dis-none">
+            <h5>Playlist</h5>
+            <a id="plus" href="#"><i class="fas fa-plus"></i> Crea playlist</a>
+            <a href="#">Nome Playlist</a>
+            <a href="#">Nome Playlist</a>
+            <a href="#">Nome Playlist</a>
+            <a href="#">Nome Playlist</a>
+            <a href="#">Nome Playlist</a>
+            <a href="#">Nome Playlist</a>
+            <a href="#">Nome Playlist</a>
+
           </div>
         </div>
       </nav>
