--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
             <a href="#">Nome Playlist</a>
             <a href="#">Nome Playlist</a>
             <a href="#">Nome Playlist</a>
+          </div>
 
+          <div class="dati-utenti">
+            <a href="#"><i class="fas fa-arrow-circle-down"></i> Installa App</a>
+            <span></span>
+            <a href="#"><i class="fas fa-user-circle"></i> John Doe</a>
           </div>
         </div>
       </nav>
