--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
         <div class="nav-top">
             <a href="#">Effettua l'upgrade</a>
         </div>
+      </nav>
+    </header>
 
-        <!-- navbar laterale -->
+
+    <main>
+      <!-- navbar laterale -->
+      <aside class="pos-rel">
         <div class="nav-lat">
           <div class="logo">
             <i class="fab fa-spotify"></i>
@@ -47,10 +52,12 @@
             <a href="#"><i class="fas fa-user-circle"></i> John Doe</a>
           </div>
         </div>
-      </nav>
-    </header>
+      </aside>
 
-    <main>
+
+      <img src="./assets/img/logo.png" alt="">
+
+
 
     </main>
 
