--- a/index.html
+++ b/index.html
@@ -54,8 +54,29 @@
         </div>
       </aside>
 
+      <section>
 
-      <img src="./assets/img/logo.png" alt="">
+      </section>
+
+      <section>
+
+      </section>
+
+      <section>
+
+      </section>
+
+      <section>
+
+      </section>
+
+      <section>
+
+      </section>
+
+
+
+
 
 
 
