--- a/index.html
+++ b/index.html
@@ -29,50 +29,59 @@
           </div>
 
           <div class="list-home">
-            <a href="#"><i class="fas fa-home"></i> Home</a>
-            <a href="#"><i class="fas fa-search"></i> Cerca</a>
-            <a href="#"><i class="fas fa-book"></i> La tua libreria</a>
+            <a href="#"><svg viewBox="0 0 512 512" width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M448 463.746h-149.333v-149.333h-85.334v149.333h-149.333v-315.428l192-111.746 192 110.984v316.19z" fill="currentColor"></path></svg> Home</a>
+            <a href="#"><svg viewBox="0 0 512 512" width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M349.714 347.937l93.714 109.969-16.254 13.969-93.969-109.969q-48.508 36.825-109.207 36.825-36.826 0-70.476-14.349t-57.905-38.603-38.603-57.905-14.349-70.476 14.349-70.476 38.603-57.905 57.905-38.603 70.476-14.349 70.476 14.349 57.905 38.603 38.603 57.905 14.349 70.476q0 37.841-14.73 71.619t-40.889 58.921zM224 377.397q43.428 0 80.254-21.461t58.286-58.286 21.461-80.254-21.461-80.254-58.286-58.285-80.254-21.46-80.254 21.46-58.285 58.285-21.46 80.254 21.46 80.254 58.285 58.286 80.254 21.461z" fill="currentColor" fill-rule="evenodd"></path></svg> Cerca</a>
+            <a href="#"><svg viewBox="0 0 512 512" width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M291.301 81.778l166.349 373.587-19.301 8.635-166.349-373.587zM64 463.746v-384h21.334v384h-21.334zM192 463.746v-384h21.334v384h-21.334z" fill="currentColor"></path></svg> La tua libreria</a>
           </div>
 
           <div class="list-home dis-none">
             <h5>Playlist</h5>
             <a id="plus" href="#"><i class="fas fa-plus"></i> Crea playlist</a>
-            <a href="#">Nome Playlist</a>
-            <a href="#">Nome Playlist</a>
-            <a href="#">Nome Playlist</a>
-            <a href="#">Nome Playlist</a>
-            <a href="#">Nome Playlist</a>
-            <a href="#">Nome Playlist</a>
-            <a href="#">Nome Playlist</a>
+            <a href="#">PRAGA 2K19</a>
+            <a href="#">Hip-Hop USA</a>
+            <a href="#">Top-50 Globale</a>
           </div>
 
           <div class="dati-utenti">
             <a href="#"><i class="fas fa-arrow-circle-down"></i> Installa App</a>
             <span></span>
-            <a href="#"><i class="fas fa-user-circle"></i> John Doe</a>
+            <a href="#"><i class="fas fa-user-circle"></i> Wassim Maatalla</a>
           </div>
         </div>
       </aside>
 
-      <section>
+      <div class="body-main">
 
-      </section>
+        <section class="p-title">
+            <div>
+              <a href="#">in evidenza</a>
+              <div id="line-green"></div>
+            </div>
+            <div>
+              <a href="#">Podcast</a>
+            </div>
+            <div>
+              <a href="#">Classifiche</a>
+            </div>
+            <div>
+              <a href="#">Generi e mood</a>
+            </div>
+            <div>
+              <a href="#">nuove uscite</a>
+            </div>
+            <div>
+              <a href="#">scopri</a>
+            </div>
+        </section>
 
-      <section>
+        <section class="recently">
+          <h2>Recently Played</h2>
 
-      </section>
 
-      <section>
+        </section>
 
-      </section>
 
-      <section>
-
-      </section>
-
-      <section>
-
-      </section>
+      </div>
 
 
 
