--- a/index.html
+++ b/index.html
@@ -76,6 +76,44 @@
 
         <section class="recently">
           <h2>Recently Played</h2>
+          <div class="container-cover">
+            <div class="cover">
+              <img src="./assets/img/zonatrap.jfif" alt="zona trap">
+              <h4>Zona Trap</h4>
+              <p>Il meglio della scena trap italiana</p>
+            </div>
+
+            <div class="cover">
+              <img src="./assets/img/calling.jpeg" alt="calling">
+              <h4>Calling my Phone</h4>
+              <p>Lil Tjay & 6Black</p>
+            </div>
+
+            <div class="cover">
+              <img src="./assets/img/zonatrap.jfif" alt="zona trap">
+              <h4>Zona Trap</h4>
+              <p>Il meglio della scena trap italiana.</p>
+            </div>
+
+            <div class="cover">
+              <img src="./assets/img/zonatrap.jfif" alt="zona trap">
+              <h4>Zona Trap</h4>
+              <p>Il meglio della scena trap italiana.</p>
+            </div>
+
+            <div class="cover">
+              <img src="./assets/img/zonatrap.jfif" alt="zona trap">
+              <h4>Zona Trap</h4>
+              <p>Il meglio della scena trap italiana.</p>
+            </div>
+
+            <div class="cover">
+              <img src="./assets/img/zonatrap.jfif" alt="zona trap">
+              <h4>Zona Trap</h4>
+              <p>Il meglio della scena trap italiana.</p>
+            </div>
+          </div>
+
 
 
         </section>
