--- a/index.html
+++ b/index.html
@@ -90,27 +90,27 @@
             </div>
 
             <div class="cover">
-              <img src="./assets/img/zonatrap.jfif" alt="zona trap">
-              <h4>Zona Trap</h4>
-              <p>Il meglio della scena trap italiana.</p>
+              <img src="./assets/img/global50.jfif" alt="global">
+              <h4>Top 50 - Globale</h4>
+              <p>Brani più ascoltati del momento</p>
             </div>
 
             <div class="cover">
-              <img src="./assets/img/zonatrap.jfif" alt="zona trap">
-              <h4>Zona Trap</h4>
-              <p>Il meglio della scena trap italiana.</p>
+              <img src="./assets/img/hello.png" alt="hello">
+              <h4>Hello (feat A Boogie Wit da Hoodie)</h4>
+              <p>Pop Smoke</p>
             </div>
 
             <div class="cover">
-              <img src="./assets/img/zonatrap.jfif" alt="zona trap">
-              <h4>Zona Trap</h4>
-              <p>Il meglio della scena trap italiana.</p>
+              <img src="./assets/img/brother.jpg" alt="brother">
+              <h4>Hey Brother</h4>
+              <p>Avicii</p>
             </div>
 
             <div class="cover">
-              <img src="./assets/img/zonatrap.jfif" alt="zona trap">
-              <h4>Zona Trap</h4>
-              <p>Il meglio della scena trap italiana.</p>
+              <img src="./assets/img/famoso.jpg" alt="famoso">
+              <h4>Bottiglie Privè</h4>
+              <p>Sfera Ebbasta</p>
             </div>
           </div>
 
