Sezione ascoltati di recente responsive

--- a/index.html
+++ b/index.html
@@ -113,8 +113,11 @@
               <p>Sfera Ebbasta</p>
             </div>
           </div>
+        </section>
 
-
+        <section class="for-you">
+          <h2>Creato per Wassim Maatalla</h2>
+          <p>Più ascolti, più accurati saranno i suggerimenti.</p>
 
         </section>
 
