modifica al main

--- a/index.html
+++ b/index.html
@@ -115,10 +115,54 @@
           </div>
         </section>
 
-        <section class="for-you">
+        <section class="recently">
           <h2>Creato per Wassim Maatalla</h2>
           <p>Più ascolti, più accurati saranno i suggerimenti.</p>
 
+          <div class="container-cover">
+            <div class="cover">
+              <img src="./assets/img/discover.png" alt="weekly">
+              <h4>Discovery weekly</h4>
+              <p>Il tuo mixtape settimanale di musica sempre nuova e di chicche scelte solo per te</p>
+            </div>
+
+            <div class="cover">
+              <img src="./assets/img/mix1.jfif" alt="mix1">
+              <h4>Daily Mix 1</h4>
+            </div>
+
+            <div class="cover">
+              <img src="./assets/img/mix2.jpg" alt="mix2">
+              <h4>Daily Mix 2</h4>
+            </div>
+
+            <div class="cover">
+              <img src="./assets/img/mix3.jfif" alt="mix3">
+              <h4>Daily Mix 3</h4>
+            </div>
+          </div>
+        </section>
+
+        <section class="recently">
+          <h2>Artisti più popolari</h2>
+          <p>Più ascolti, più accurati saranno i suggerimenti.</p>
+
+          <div class="container-cover">
+            <div class="cover my-circle">
+              <img src="./assets/img/popsmoke.jfif" alt="pop smoke">
+              <h4>Pop Smoke</h4>
+            </div>
+
+            <div class="cover my-circle">
+              <img src="./assets/img/xtent.jpg" alt="xtentacion">
+              <h4>XXXTentacion</h4>
+            </div>
+
+            <div class="cover my-circle">
+              <img src="./assets/img/marra.jfif" alt="marra">
+              <h4>Marracash</h4>
+            </div>
+          </div>
         </section>
 
 
