footer fatto (non responsive)

--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
       </aside>
 
       <div class="body-main">
-
         <section class="p-title">
             <div>
               <a href="#">in evidenza</a>
@@ -76,6 +75,7 @@
 
         <section class="recently">
           <h2>Recently Played</h2>
+
           <div class="container-cover">
             <div class="cover">
               <img src="./assets/img/zonatrap.jfif" alt="zona trap">
@@ -164,19 +164,57 @@
             </div>
           </div>
         </section>
-
-
       </div>
-
-
-
-
-
-
-
     </main>
 
+    <!-- fine pagina -->
     <footer>
+      <section>
+        <div class="foot-left">
+          <img src="./assets/img/phonec.jfif" alt="phone">
+          <div>
+            <h5>Calling my Phone</h5>
+            <a href="#"><p>Lil Tjay, 6Black</p></a>
+          </div>
+          <a href="#">
+            <i class="far fa-heart"></i>
+          </a>
+
+          <a href="#">
+            <i class="far fa-folder"></i>
+          </a>
+        </div>
+      </section>
+
+      <section>
+        <div class="foot-central">
+          <div class="play-section">
+            <a href="#"><i class="fas fa-random"></i></a>
+            <a href="#"><i class="fas fa-step-backward"></i></a>
+            <a href="#"><i class="far fa-play-circle"></i></a>
+            <a href="#"><i class="fas fa-step-forward"></i></a>
+            <a href="#"><i class="fas fa-undo"></i></a>
+          </div>
+
+          <div class="riproduzione">
+            <a href="#">0:57</a>
+            <div></div>
+            <div></div>
+            <a href="#">3:25</a>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="foot-right">
+          <a href="#"><i class="fas fa-list-ul"></i></a>
+          <a href="#"><i class="fas fa-tv"></i></a>
+          <a href="#"><i class="fas fa-volume-up"></i></a>
+          <div></div>
+          <div></div>
+        </div>
+      </section>
+
 
     </footer>
 
