footer quasi responsive

--- a/index.html
+++ b/index.html
@@ -172,10 +172,11 @@
       <section>
         <div class="foot-left">
           <img src="./assets/img/phonec.jfif" alt="phone">
-          <div>
+          <div class="song">
             <h5>Calling my Phone</h5>
             <a href="#"><p>Lil Tjay, 6Black</p></a>
           </div>
+          <div class="icon">
             <a href="#">
               <i class="far fa-heart"></i>
             </a>
@@ -183,7 +184,7 @@
             <a href="#">
               <i class="far fa-folder"></i>
             </a>
-          
+          </div>
         </div>
       </section>
 
