--- a/index.html
+++ b/index.html
@@ -77,40 +77,58 @@
           <h2>Recently Played</h2>
 
           <div class="container-cover">
-            <div class="cover">
+            <div class="cover pos-rel">
               <img src="./assets/img/zonatrap.jfif" alt="zona trap">
               <h4>Zona Trap</h4>
               <p>Il meglio della scena trap italiana</p>
+              <div class="over-img">
+                <i class="far fa-play-circle"></i>
+              </div>
             </div>
 
-            <div class="cover">
+            <div class="cover pos-rel">
               <img src="./assets/img/calling.jpeg" alt="calling">
               <h4>Calling my Phone</h4>
               <p>Lil Tjay & 6Black</p>
+              <div class="over-img">
+                <i class="far fa-play-circle"></i>
+              </div>
             </div>
 
-            <div class="cover">
+            <div class="cover pos-rel">
               <img src="./assets/img/global50.jfif" alt="global">
               <h4>Top 50 - Globale</h4>
               <p>Brani più ascoltati del momento</p>
+              <div class="over-img">
+                <i class="far fa-play-circle"></i>
+              </div>
             </div>
 
-            <div class="cover">
+            <div class="cover pos-rel">
               <img src="./assets/img/hello.png" alt="hello">
               <h4>Hello (feat A Boogie Wit da Hoodie)</h4>
               <p>Pop Smoke</p>
+              <div class="over-img">
+                <i class="far fa-play-circle"></i>
+              </div>
             </div>
 
-            <div class="cover">
+            <div class="cover pos-rel">
               <img src="./assets/img/brother.jpg" alt="brother">
               <h4>Hey Brother</h4>
               <p>Avicii</p>
+              <div class="over-img">
+                <i class="far fa-play-circle"></i>
+              </div>
             </div>
 
-            <div class="cover">
+            <div class="cover pos-rel">
               <img src="./assets/img/famoso.jpg" alt="famoso">
               <h4>Bottiglie Privè</h4>
               <p>Sfera Ebbasta</p>
+              <div class="over-img">
+                <i class="far fa-play-circle"></i>
+              </div>
             </div>
           </div>
         </section>
@@ -120,25 +138,37 @@
           <p>Più ascolti, più accurati saranno i suggerimenti.</p>
 
           <div class="container-cover">
-            <div class="cover">
+            <div class="cover pos-rel">
               <img src="./assets/img/discover.png" alt="weekly">
               <h4>Discovery weekly</h4>
               <p>Il tuo mixtape settimanale di musica sempre nuova e di chicche scelte solo per te</p>
+              <div class="over-img">
+                <i class="far fa-play-circle"></i>
+              </div>
             </div>
 
-            <div class="cover">
+            <div class="cover pos-rel">
               <img src="./assets/img/mix1.jfif" alt="mix1">
               <h4>Daily Mix 1</h4>
+              <div class="over-img">
+                <i class="far fa-play-circle"></i>
+              </div>
             </div>
 
-            <div class="cover">
+            <div class="cover pos-rel">
               <img src="./assets/img/mix2.jpg" alt="mix2">
               <h4>Daily Mix 2</h4>
+              <div class="over-img">
+                <i class="far fa-play-circle"></i>
+              </div>
             </div>
 
-            <div class="cover">
+            <div class="cover pos-rel">
               <img src="./assets/img/mix3.jfif" alt="mix3">
               <h4>Daily Mix 3</h4>
+              <div class="over-img">
+                <i class="far fa-play-circle"></i>
+              </div>
             </div>
           </div>
         </section>
