--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
           <div class="riproduzione">
             <a href="#">0:57</a>
             <div></div>
+            <i class="fas fa-circle"></i>
             <div></div>
             <a href="#">3:25</a>
           </div>
@@ -268,7 +269,7 @@
           <a href="#"><i class="fas fa-list-ul"></i></a>
           <a href="#"><i class="fas fa-tv"></i></a>
           <a href="#"><i class="fas fa-volume-up"></i></a>
-          <div></div>
+          <div></div><i class="fas fa-circle"></i>
           <div></div>
         </div>
       </section>
